# robot_trainer

./: .forgeignore  .gitignore  README.md  drizzle.config.ts  forge.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  robot_include_test.xml  scene_include_test.xml  tsconfig.json  vite.main.config.ts  vite.renderer.config.mts  vitest.config.ts
.github/: copilot-instructions.md  dependabot.yml
.husky/: pre-commit
drizzle/: 0000_brainy_darkhawk.sql  0000_conscious_sunset_bain.sql  0000_jazzy_black_cat.sql  0000_naive_red_ghost.sql  0000_petite_scream.sql  0000_slippery_scarecrow.sql  0000_thankful_baron_zemo.sql  0000_wet_iron_monger.sql  0001_fancy_imperial_guard.sql  0001_perfect_sabretooth.sql  0001_typical_psylocke.sql  0002_optimal_sage.sql  0002_panoramic_the_phantom.sql  0003_past_the_professor.sql  0004_slimy_grim_reaper.sql  0005_bored_squadron_sinister.sql
dummy_model/: robot.xml
scripts/: generate_robot_and_scene_seeds.ts  generate_robot_constants.js
src/: MigrationRoot.tsx  app.tsx  electron-api.d.ts  (+4 more)
src/python/: DatasetRecordConfig.json  GymManipulatorConfig.json  PreTrainedConfig.json  README.md  TeleoperatorConfig.json  custom_mujoco_env.py  custom_mujoco_env_test.py  dev-requirements.txt  generate_lerobot_schema.py  gym_manipulator.py  gym_manipulator_test.py  lerobot_schema.json  main.py  main_test.py  pyproject.toml  pytest.ini  simulate.py
src/python/lerobot_json_schemas/: generate_lerobot_schema.py
src/python/lerobot_json_schemas/json/: RecordConfig.json  RobotConfig.json  lerobot_schema.json
(+108 files in other folders)
