[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "lerobot[all,docs,hilserl]",
    "python-socketio>=5.16.1",
]

[tool.pytest.ini_options]
# Prefer "*_test.py" naming convention for tests and limit discovery to src/python
python_files = ["*_test.py"]
testpaths = ["src/python"]

[dependency-groups]
dev = [
]